# react-juce-application-poc

./: .gitignore  Makefile  README.md
backend/: .clang-format  .gitignore  CMakeLists.txt
backend/app/: CMakeLists.txt
backend/app/include/ReactJuceGUIApplication/: MainComponent.h  Util.h
backend/app/src/: Main.cpp  MainComponent.cpp
backend/cmake/: cpm.cmake
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  juce-framework-frontend.d.ts
frontend/src/api/: juce-service.ts
frontend/src/models/: juce.models.ts
